Parcial02 - Child Parent Comunication

--- a/client/src/features/account/register/register.html
+++ b/client/src/features/account/register/register.html
@@ -14,9 +14,9 @@
                     <option value="{{member.id}}">{{member.displayName}}</option>
                 }
             </select>
-            
+
             <div class="flex items-center justify-end gap-3">
-                <button class="btn" (click)="cancel()">Cancel</button>
+                <button class="btn" type="button" (click)="cancel()">Cancel</button>
                 <button class="btn btn-info btn-lg" type="submit">Register</button>
             </div>
         </form>
